@@ -1,3 +1,8 @@
+2006-11-14  Carlos Garnacho  <carlosg@gnome.org>
+
+	* user-settings.c (check_password): patch by Sebastien Bacher 
+	<seb128@debian.org> to allow random passwords. Fixes #355432.
+
 2006-11-05  Carlos Garnacho  <carlosg@gnome.org>
 
 	* Release 2.15.6
